--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="lesson1/index.html">Урок 1</a>
+                        <a href="lesson8/index.html">Урок 8</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson13/index.html">Урок 13</a>
                     </li>
                 </ul>
             </div>
