--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
                     <li class="content__list-item">
                         <a href="lesson58/index.html">Урок 58</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson59/index.html">Урок 59</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson69-maket/index.html">Урок 69</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
