--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
                     <li class="content__list-item">
                         <a href="lesson69-maket/index.html">Урок 69</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-76/index.html">Урок 76</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-77/index.html">Урок 77</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-78/index.html">Урок 78</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
