--- a/index.html
+++ b/index.html
@@ -144,7 +144,16 @@
                         <a href="lesson-81/index.html">Урок 81</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson-82/index.html">Урок 82</a>
+                        <a href="lesson-82-1/index.html">Урок 82-1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-82-2/index.html">Урок 82-2</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-82-3/index.html">Урок 82-3</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-83/index.html">Урок 83</a>
                     </li>
                 </ul>
             </div>
