--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@
                     <li class="content__list-item">
                         <a href="lesson-83/index.html">Урок 83</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-84/index.html">Урок 84</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-85/index.html">Урок 85</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
