--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
                     <li class="content__list-item">
                         <a href="lesson-85/index.html">Урок 85</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="WAKE & BAKE/index.html">W&B</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
